Change ports for lolin d32 pro to COM3

--- a/platformio.ini
+++ b/platformio.ini
@@ -91,8 +91,8 @@ lib_deps =
 	https://github.com/biologist79/rfid.git
 	https://github.com/tueddy/PN5180-Library.git
 extra_scripts = ${env:common.extra_scripts}
-upload_port = /dev/cu.wchusbserial1410
-monitor_port = /dev/cu.wchusbserial1410
+upload_port = COM3
+monitor_port = COM3
 build_flags = -DBOARD_HAS_PSRAM
               -mfix-esp32-psram-cache-issue
 
